@@ -11,6 +11,7 @@ Revision history for Rex
  [DOCUMENTATION]
  - Clarify sudo usage for multiple commands
  - Clarify task hooks documentation
+ - Clarify usage and purpose of configuration methods
 
  [ENHANCEMENTS]
 
